--- a/package.json
+++ b/package.json
@@ -5,12 +5,20 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
+  },
+  "bin": {
+    "todo": "./index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.4.5"
+    "commander": "^12.1.0",
+    "dotenv": "^16.4.5",
+    "inquirer": "^10.0.1",
+    "lowdb": "^7.0.1",
+    "mongodb": "^6.8.0",
+    "nanoid": "^5.0.7"
   }
 }
